k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: nginx:1.27-alpine
          ports:
            - containerPort: 8080
          command: ["/bin/sh", "-lc"]
          args:
            - |
              cat >/etc/nginx/conf.d/default.conf <<'EOF'
              server {
                listen 8080;

                location = /healthz {
                  default_type application/json;
                  return 200 '{"status":"ok","service":"app","env":"__ENV__"}';
                }

                location / { return 200 "ok\n"; }
              }
              EOF
              sed -i "s/__ENV__/${ENV_NAME}/g" /etc/nginx/conf.d/default.conf
              nginx -g 'daemon off;'
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
